--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mybatis.type-aliases-package=com.reviewer.mvc.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # view resolver
-spring.mvc.view.prefix=/WEB-INF/views
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #file
